2008-03-04  John W. Eaton  <jwe@octave.org>

	* plot/print.m: Fix oops in applying last change.

2008-03-04  Bill Denney  <bill@denney.ws>

	* geometry/rectint.m: New function.

2008-03-04  Michael Goffioul <michael.goffioul@gmail.com>

	* pkg/pkg.m (pkg:configure_make): Make it work with recent changes in
	isspace handling with cell arrays of strings.

2008-03-04  Ben Abbott <bpabbott@mac.com>

	* polynomial/polyfit.m: Modified tests to respect a relative tolerance.

	* plot/print.m: Accept a figure handle as an optional input.
 
2008-02-29  John W. Eaton  <jwe@octave.org>

	* plot/print.m: Handle gif and jpg devices.

2008-02-28  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m (get_old_gnuplot_color): New subfunction.
	Use it to replace repeated if/elseif blocks.

2008-02-28  Kai Habel  <kai.habel@gmx.de>

	* plot/__go_draw_axes__.m: If facecolor property of a surface is
	"none", don't use pm3d mode and set linestyle correctly. 

2008-02-25  Ben Abbott <bpabbott@mac.com>

	* control/system/zpout.m, finance/irr.m, general/int2str.m,
	general/num2str.m, miscellaneous/bug_report.m,
	miscellaneous/copyfile.m, miscellaneous/dir.m,
	miscellaneous/edit.m, miscellaneous/fullfile.m,
	miscellaneous/mkoctfile.m, miscellaneous/movefile.m,
	miscellaneous/tempdir.m, miscellaneous/unpack.m,
	path/__extractpath__.m, pkg/pkg.m, plot/__ezplot__.m,
	plot/__go_draw_axes__.m, plot/legend.m, plot/print.m,
	signal/spectral_adf.m, signal/spectral_xdf.m,
	statistics/tests/z_test.m, statistics/tests/z_test_2.m,
	strings/Makefile.in, strings/strcat.m, strings/strvcat.m,
	testfun/assert.m, testfun/demo.m, testfun/speed.m,
	testfun/test.m: Use cstrcat instead of strcat.

	* strings/strcat.m: New compatible version.

	* strings/cstrcat.m: Rename from strings/strcat.m.

2008-02-25  John W. Eaton  <jwe@octave.org>

	* strings/isstrprop.m: New file.

2008-02-25  Ryan Hinton  <rwh4s@virginia.edu>

	* miscellaneous/unpack.m: Use "-f -" args for tar.
